fix mobile layout issues

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/MainLayout.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/MainLayout.razor.scss
@@ -2,10 +2,10 @@
 
 main {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .body {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
