--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/NavPanel.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/NavPanel.razor.scss
@@ -35,7 +35,6 @@ section {
     height: 100%;
     position: fixed;
     min-height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
 
     @include gt-sm {
         display: none;
