--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/UserMenu.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Main/UserMenu.razor.scss
@@ -1,9 +1,18 @@
 @import '../../../Styles/abstracts/_media-queries.scss';
 
-::deep .callout {
-    @include lt-md {
-        height: unset;
-        bottom: var(--app-inset-bottom);
-        top: var(--app-inset-top) !important;
+::deep {
+    .user-menu-callout {
+        @include lt-md {
+            height: unset;
+            box-shadow: none;
+            bottom: var(--app-inset-bottom);
+            top: var(--app-inset-top) !important;
+        }
+    }
+
+    .user-menu-card {
+        @include lt-md {
+            box-shadow: none;
+        }
     }
 }
